<resources>
    <string name="app_name">ToDo</string>
    <string name="Tasks">Tasks</string>
    <string name="addtask">AddTask</string>
    <string name="icon">icon</string>
    <string name="click_here_to_add_new_task">click here to add new Task</string>
    <string name="save">Save</string>
    <string name="remember_your_task">Remember Your task</string>
    <string name="backgoundimage">backgoundImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="calendar">calendar</string>
    <string name="hello">Hello!</string>
    <string name="all_tasks">All tasks</string>
    <string name="your_task">Your_task</string>
    <string name="add_task">Add task</string>
    <string name="add_your_task">Add Your Task</string>
    <string name="task_description">Task description</string>
</resources>