<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_your_task"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />


        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/task_description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/newTasktxt"
            android:hint="@string/your_task"
            android:importantForAutofill="no"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            tools:ignore="MissingPrefix,TextFields" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NewTaskbtn"
            android:text="@string/add_task"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>



<!--    <EditText-->
<!--        android:id="@+id/newTasktxt"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@null"-->
<!--        android:hint="@string/click_here_to_add_new_task"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--        <Button-->
<!--            android:id="@+id/NewTaskbtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/newTasktxt"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:text="@string/save"-->
<!--            android:background="@color/colorPrimary"-->
<!--            android:textSize="16sp"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@android:color/black">-->
<!--        </Button>-->


<!--</ScrollView>-->
<!-- -->