<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/hello"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_tasks"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            tools:ignore="MissingPrefix" />

        </LinearLayout>

    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasksRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true" />

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/taskaddbtn"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginEnd="355dp"
            android:layout_marginBottom="573dp"
            android:backgroundTint="@color/DarkBlue"
            android:contentDescription="@string/addtask"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>